# cg2019-game

./: .gitignore  CMakeLists.txt  README.md  cleancmake.sh  dokumentation.txt  main.cpp  runGame.sh  stage.cc
2019_cg_physics/2019_cg_physics/: Exception.cpp  Exception.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  main.cpp
2019_cg_physics/2019_cg_physics.xcodeproj/: project.pbxproj
2019_cg_physics/2019_cg_physics.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
2019_cg_physics/2019_cg_physics/Camera/: Camera.cpp  Camera.hpp
2019_cg_physics/2019_cg_physics/Components/: EComponentType.hpp  IComponent.hpp
2019_cg_physics/2019_cg_physics/Components/Animate/SteveArmAnimation/: SteveArmAnimation.cpp
2019_cg_physics/2019_cg_physics/Components/Animate/SteveLegAnimation/: SteveLegAnimation.hpp
2019_cg_physics/2019_cg_physics/Components/Drawing/: IDrawing.hpp
2019_cg_physics/2019_cg_physics/Components/Drawing/CubeDrawing/: CubeDrawing.cpp  CubeDrawing.hpp
2019_cg_physics/2019_cg_physics/Components/Drawing/DummyCube/: DummyCubeDrawing.cpp  DummyCubeDrawing.hpp
2019_cg_physics/2019_cg_physics/Components/Drawing/DummyTriangle/: CubeDrawing.cpp  CubeDrawing.hpp  DummyTriangleDrawing.cpp  DummyTriangleDrawing.hpp
2019_cg_physics/2019_cg_physics/Components/Drawing/Geometrie/: Geometrie.cpp  Geometrie.hpp
2019_cg_physics/2019_cg_physics/Components/Drawing/Line/: LineDrawing.cpp
2019_cg_physics/2019_cg_physics/Components/Drawing/LineDrawing/: LineDrawing.cpp  LineDrawing.hpp
2019_cg_physics/2019_cg_physics/Components/Drawing/Probe/: Probe.hpp
2019_cg_physics/2019_cg_physics/Components/Drawing/Sphere/: SphereDrawing.cpp  SphereDrawing.hpp
2019_cg_physics/2019_cg_physics/Components/Drawing/Stage/: Header.h  StageDrawing.cpp  (+1 more)
2019_cg_physics/2019_cg_physics/Components/Player/: IPlayer.hpp
2019_cg_physics/2019_cg_physics/Components/Position/: Camera.cpp  Camera.hpp  ERotation.hpp  IPosition.hpp
2019_cg_physics/2019_cg_physics/Components/Shader/: EShaderAttrib.hpp  EShaderUniform.hpp  IShader.hpp
2019_cg_physics/2019_cg_physics/Components/Texture/: ITexture.hpp
2019_cg_physics/2019_cg_physics/Components/View/: IView.hpp  camera.cpp  camera.hpp
2019_cg_physics/2019_cg_physics/Factory/: PrimitiveObjects.cpp  PrimitiveObjects.hpp
2019_cg_physics/2019_cg_physics/Managers/: AbstractManager.cpp  AbstractManager.hpp
2019_cg_physics/2019_cg_physics/Managers/GameLogicManager/: GameLogicManager.cpp
2019_cg_physics/2019_cg_physics/Managers/KeyBoard/: KeyBoard.cpp  KeyboardManager.cpp  KeyboardManager.hpp
2019_cg_physics/2019_cg_physics/Managers/Keyboard/: KeyboardManager.cpp  KeyboardManager.hpp
2019_cg_physics/2019_cg_physics/Managers/Object/: ObjectManager.cpp  ObjectManager.hpp
2019_cg_physics/2019_cg_physics/Managers/PhysicsManager/: IMovement.hpp  PhysicsManager.cpp  PhysicsManager.hpp
2019_cg_physics/2019_cg_physics/Managers/Rendering/: RenderManager.cpp  RenderManager.hpp
2019_cg_physics/2019_cg_physics/Managers/Window/: WindowManager.cpp  WindowManager.hpp
2019_cg_physics/glfw/3.3/: INSTALL_RECEIPT.json
2019_cg_physics/src/: 2019_cg_physics  CMakeLists.txt  Exception.hpp  Game.cpp
2019_cg_physics/src/Components/Player/: IPlayer.cpp
2019_cg_physics/src/Managers/KeyBoard/: KeyboardManager.cpp  KeyboardManager.hpp
2019_cg_physics/src/Managers/Window/: WindowManager.hpp
2019_cg_test/2019_cg_test/: main.cpp
2019_cg_test/2019_cg_test.xcodeproj/: project.pbxproj
2019_cg_test/2019_cg_test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CMake/: FindGLFW.cmake  FindSOIL.cmake
src/: CMakeLists.txt  Game.hpp  GameObject.cpp  GameObject.hpp  main.cpp
src/Components/: IComponent.hpp
src/Components/Animate/: IAnimation.hpp
src/Components/Animate/SteveArmAnimation/: SteveArmAnimation.hpp
src/Components/Animate/SteveLegAnimation/: SteveLegAnimation.cpp
src/Components/Drawing/CubeDrawing/: CubeDrawing.cpp  CubeDrawing.hpp
src/Components/Drawing/Geometrie/: Geometrie.cpp  Geometrie.hpp
src/Components/Drawing/Line/: LineDrawing.hpp
src/Components/Drawing/Sphere/: SphereDrawing.cpp  SphereDrawing.hpp
src/Components/Drawing/Stage/: StageDrawing.cpp  StageDrawing.hpp
src/Components/Drawing/Texture/: ETextureType.hpp
src/Components/Drawing/Texture/SteveAbstractTexture/: SteveAbstractTexture.cpp
src/Components/Drawing/Texture/SteveAbstractTexture/GameOverBlock/: GameOverBlock.cpp  GameOverBlockTexture.cpp
src/Components/Drawing/Texture/SteveAbstractTexture/SteveArm/: SteveArmTexture.cpp
src/Components/Drawing/Texture/SteveAbstractTexture/SteveBody/: SteveBodyTexture.hpp
src/Components/Drawing/Texture/SteveAbstractTexture/SteveHead/: SteveHeadTexture.cpp
src/Components/Player/: IPlayer.hpp
src/Components/Position/: IPosition.hpp
src/Components/Position/PixelTransform/: PixelTransform.cpp
src/Components/Shader/: EShaderType.hpp  IShader.hpp
src/Components/Shader/DefaultShader/: DefaultShader.hpp
src/Components/View/: IView.hpp
src/Components/View/PrototypeView/: PrototypeView.cpp  PrototypeView.hpp
src/Factory/: PrimitiveObjects.cpp  PrimitiveObjects.hpp
src/Managers/GameLogicManager/: GameLogicManager.cpp  GameLogicManager.hpp
src/Managers/KeyBoard/: KeyBoard.hpp  KeyboardManager.cpp
src/Managers/PhysicsManager/: PhysicsManager.cpp
src/Managers/Rendering/: RenderManager.cpp
src/Managers/Window/: WindowManager.cpp  WindowManager.hpp
(+39 files in other folders)
